Varia: Fix iframe width on mobile devices

--- a/varia/sass/components/content/_entry-content.scss
+++ b/varia/sass/components/content/_entry-content.scss
@@ -43,9 +43,6 @@
 		margin: #{map-deep-get($config-global, "spacing", "vertical")} 0 !important;
 		max-width: 100% !important;
 
-		@include media(mobile) {
-			max-width: #{map-deep-get($config-global, "spacing", "vertical")} !important;
-		}
 	}
 
 	// Page links
