--- a/varia/style.css
+++ b/varia/style.css
@@ -3186,12 +3186,6 @@ body:not(.fse-enabled) .footer-menu a {
 	max-width: 100% !important;
 }
 
-@media only screen and (min-width: 560px) {
-	.entry-content > iframe[style] {
-		max-width: 32px !important;
-	}
-}
-
 .entry-attachment {
 	text-align: center;
 }
